flux/apps/audiobookshelf/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-02
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: audiobookshelf-data
              mountPath: /audiobooks
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: audiobookshelf-config-pvc
        - name: audiobookshelf-data
          persistentVolumeClaim:
            claimName: audiobookshelf-media-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-service
  namespace: audiobookshelf
spec:
  selector:
    app: audiobookshelf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
